v 0.2.0 (in development):-

1. SmartyLint now tokenizes smarty tags.
2. Added rule:- Show error when single line smarty tag has space before closing it.
3. Updated copyright

=========================================================================

v 0.1.4 (Tue, 11 Sept 2013):-

Disabled rule which checks for empty file after file comment and before content.
It was disabled because it would print carriage return unnecessary when not needed.

Bugs fixed:-
SmartyLint would print "no of files" processed even when showProgress was off.
CLI file was having its name in CAPS.
generate function in Report file was supposed to send total number of errors.

===========================================================================

v 0.1.3 (Tue, 10 Sept 2013):-

Minor bug fixes in file comment rule.

===========================================================================

v 0.1.2 (Sun, 08 Sept 2013):-

1.  Progress shown while files are scanned is turned off by default.
    Need pass short argument "-p" to see progress.
2.  Can disable rule for all files.
3.  Can disable rule for selected files.
4.  Can exclude folders/files/patterns from the folder being scanned.
5.  Sample file sample.ignorerules.xml is available for points 2, 3 and 4
7.  You can pass ignore rules using long argument "--ignore-rules=<path to ignorerules.xml>"
8.  Improve tokenizer to handle new line characters in a better way.
9.  Folder Tokenizers is renamed to Tokenizer because we have one tokenizer and which
    pointed to remove 's' from the folder.
10. TODO and FIXME are also checked inside HTML Comments.
11. Added this (CHANGE_LOG) file.

===========================================================================

v 0.1.1 (Fri, 05 Sept 2013):-

Quick fix release which adds
1. support for PHP backword compatibility.
2. Minor bug fixes.

===========================================================================

v 0.1 (Fri, 03 Sept 2013):-
