@@ -3,6 +3,7 @@ v 0.2.0 (in development):-
 1. SmartyLint now tokenizes smarty tags.
 2. Added rule:- Show error when single line smarty tag has space before closing it.
 3. Updated copyright
+4. Added support for custom delimiters which are more than one character.
 
 =========================================================================
 
